# modbus-ascii

./: CMakeLists.txt  README.md
src/: main.cpp
src/modbus/: Frame.cpp  Frame.hpp  LRC.cpp  LRC.hpp  Master.cpp  Master.hpp  Slave.cpp  Slave.hpp
src/serial/: SerialPort.cpp  SerialPort.hpp
src/ui/: UI.cpp  UI.hpp
